src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail20.jova
class Test{

  public int foo(int x){
      int y;
      return 0;
  }

  public bool foo(int x){
        int y;
        return false;
   }

}
